# hydralink

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  mypy.ini  pyproject.toml  start-gui.bat  tox.ini
.github/workflows/: lint.yml  publish-to-pypi.yml
hydralink/: __init__.py  __main__.py  bcm89881.py  gui.py  hydralink.py  hydralink_config.py  lan7801.py  lan7801_libusb.py  lan7801_win.py  windows_apis.py
test/: test_hil.py
usb2ae/: bcm89881.py  lan7801.py  lan7801_win.py  usb2ae_config.py
