[build-system]
requires = [ "setuptools>=62.0.0", "setuptools_scm>=8" ]
build-backend = "setuptools.build_meta"

[project]
name = "hydralink"
dynamic = [ "version" ]
authors = [
    { name="Enrico POZZOBON" },
]
readme = "README.md"
requires-python = ">=3.11, <4"
description = "Library to configure the dissecto hydralink"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    'pyusb'
]

# setuptools specific

[tool.setuptools.packages.find]
include = [
    "hydralink*",
]
exclude = [
    "test*",
]

[project.scripts]
hydralink_config = "hydralink:main"

[tool.setuptools_scm]
